--- a/apps/crm/crm/src/app/crm/pages/waterfall/waterfall.component.html
+++ b/apps/crm/crm/src/app/crm/pages/waterfall/waterfall.component.html
@@ -134,10 +134,10 @@
             <ng-template #noPrice>--</ng-template>
           </ng-template>
           <ng-template colRef="payload.from" label="From" let-from sort>
-            <ng-container *ngIf="from?.right">
-              {{ from.right }} ({{ from.org ? getRightholderName(from.org) : '--' }})
+            <ng-container *ngIf="from?.org">
+              {{ getRightholderName(from.org) }}
             </ng-container>
-            <ng-container *ngIf="!from?.right">
+            <ng-container *ngIf="!from?.org">
               {{ from }}
             </ng-container>
             <ng-container *ngIf="!from">
@@ -146,9 +146,12 @@
           </ng-template>
           <ng-template colRef="payload.to" label="To" let-to sort>
             <ng-container *ngIf="to?.right">
-              {{ to.right }} ({{ to.org ? getRightholderName(to.org) : '--' }})
+              {{ to.right }}
             </ng-container>
-            <ng-container *ngIf="!to?.right">
+            <ng-container *ngIf="to?.org">
+              {{ getRightholderName(to.org) }}
+            </ng-container>
+            <ng-container *ngIf="!to?.right && !to?.org">
               {{ to }}
             </ng-container>
             <ng-container *ngIf="!to">
@@ -352,12 +355,6 @@
         </ng-template>
         <ng-template colRef="groupId" label="Group" let-groupId sort>
           {{ groupId ? groupId : '--' }}
-        </ng-template>
-        <ng-template colRef="date" label="Date" let-date sort defaultSort>
-          {{ date | date: 'dd/MM/yyyy' }}
-        </ng-template>
-        <ng-template colRef="actionName" label="Action Name" let-actionName sort>
-          {{ actionName }}
         </ng-template>
         <ng-template colRef="percent" label="%" let-percent>
           {{ percent ? percent  : '--' }}
