--- a/apps/crm/crm/src/app/dashboard/toolbar-top/toolbar-top.component.html
+++ b/apps/crm/crm/src/app/dashboard/toolbar-top/toolbar-top.component.html
@@ -36,8 +36,6 @@
     <mat-icon svgIcon="build"></mat-icon><span matLine>Tools</span>
   </button>
 
-  <button mat-button (click)="updateAirtable()">Airtable update</button>
-
   <span fxFlex="auto"></span>
 
   <auth-widget></auth-widget>
@@ -103,6 +101,9 @@
     <mat-icon svgIcon="mail"></mat-icon><span matLine>Emails</span>
   </a>
   <a mat-menu-item routerLink="/c/o/dashboard/crm/dev-area">
-    <mat-icon class="unicorn" svgIcon="unicorn"></mat-icon><span matLine>Developpers playground</span>
+    <mat-icon svgIcon="unicorn"></mat-icon><span matLine>Developpers playground</span>
   </a>
+  <button mat-menu-item [disabled]="updateInProgress" (click)="updateAirtable()">
+    <mat-icon svgIcon="update"></mat-icon><span matLine>Airtable update</span>
+  </button>
 </mat-menu>
