improved way to fetch rights of a rightholder

--- a/apps/crm/crm/src/app/crm/pages/waterfall-document/waterfall-document.component.html
+++ b/apps/crm/crm/src/app/crm/pages/waterfall-document/waterfall-document.component.html
@@ -102,6 +102,9 @@
       <ng-template colRef="name" label="Name" let-name sort>
         {{ name }}
       </ng-template>
+      <ng-template colRef="rightholderId" label="Rightholder" let-rightholderId sort>
+        {{ getRightholderName(rightholderId) }}
+      </ng-template>
       <ng-template colRef="type" label="Type" let-type sort>
         {{ type | toLabel: 'rightTypes' }}
       </ng-template>
