--- a/apps/crm/crm/src/app/crm/pages/waterfall-statement/waterfall-statement.component.html
+++ b/apps/crm/crm/src/app/crm/pages/waterfall-statement/waterfall-statement.component.html
@@ -38,45 +38,42 @@
     </apx-chart>
   </section>
 
-  <ng-container *ngIf="isDistributorStatement()">
-    <h3>Incomes</h3>
-    <bf-table [source]="incomes" clickable useFilter pagination="50">
+  <h3>Incomes</h3>
+  <bf-table [source]="incomes" clickable useFilter pagination="50">
+    <ng-template colRef="id" label="Id" let-id sort>
+      {{ id }}
+    </ng-template>
+    <ng-template colRef="" label="Source" let-item sort>
+      {{ getAssociatedSource(item) }}
+    </ng-template>
+    <ng-template colRef="" label="Price" let-item sort>
+      <ng-container *ngIf="toPricePerCurrency(item) as amount">
+        <price-per-currency [price]="amount"></price-per-currency>
+      </ng-container>
+    </ng-template>
+    <!-- TODO #9493 add 1 column showing what current rightholder taken for this income (internal payments)-->
+    <!-- TODO #9493 add 1 column showing value of external payment for this income (income - sum(internal payments))-->
+    <!-- TODO #9493 + 2 columns calculated & cumulated of calculated -->
+  </bf-table>
+
+  <ng-container *ngIf="isDistributorStatement() && expenses.length">
+    <h3>Expenses</h3>
+    <bf-table [source]="expenses" clickable useFilter pagination="50">
       <ng-template colRef="id" label="Id" let-id sort>
         {{ id }}
       </ng-template>
-      <ng-template colRef="" label="Source" let-item sort>
-        {{ getAssociatedSource(item) }}
+      <ng-template colRef="category" label="Category" let-category sort>
+        {{ category }}
+      </ng-template>
+      <ng-template colRef="type" label="Type" let-type sort>
+        {{ type }}
       </ng-template>
       <ng-template colRef="" label="Price" let-item sort>
         <ng-container *ngIf="toPricePerCurrency(item) as amount">
           <price-per-currency [price]="amount"></price-per-currency>
         </ng-container>
       </ng-template>
-      <!-- TODO #9493 add 1 column showing what current rightholder taken for this income (internal payments)-->
-      <!-- TODO #9493 add 1 column showing value of external payment for this income (income - sum(internal payments))-->
-      <!-- TODO #9493 + 2 columns calculated & cumulated of calculated -->
     </bf-table>
-  
-    <ng-container *ngIf="expenses.length">
-      <h3>Expenses</h3>
-      <bf-table [source]="expenses" clickable useFilter pagination="50">
-        <ng-template colRef="id" label="Id" let-id sort>
-          {{ id }}
-        </ng-template>
-        <ng-template colRef="category" label="Category" let-category sort>
-          {{ category }}
-        </ng-template>
-        <ng-template colRef="type" label="Type" let-type sort>
-          {{ type }}
-        </ng-template>
-        <ng-template colRef="" label="Price" let-item sort>
-          <ng-container *ngIf="toPricePerCurrency(item) as amount">
-            <price-per-currency [price]="amount"></price-per-currency>
-          </ng-container>
-        </ng-template>
-      </bf-table>
-    </ng-container>
-
   </ng-container>
 
   <h3>Rights</h3>
